k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: cloud-native-app-service
spec:
  selector:
    app: cloud-native-app
  ports:
    - protocol: TCP
      port: 80 
      targetPort: 80  
  type: NodePort
